examples/invalid/includechild.mcl

void setX() {
    x = 7 + 2;
}